# sg-pool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
docs/: README.md  amp-server-architecture.md  backend-design.md
docs/tasks/: .gitkeep
frontend/: .gitignore  .umirc.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: global.css
frontend/src/api/: configs.ts  dashboard.ts  keys.ts  logs.ts
frontend/src/layouts/: index.tsx
frontend/src/utils/: request.ts
src/: app.py
src/configs/: config.py  global_config.py
src/constants/: __init__.py  config_key.py  constants.py  models.py
src/controller/: api_controller.py
src/controller/web/: __init__.py  auth_controller.py  config_controller.py  dashboard_controller.py  key_controller.py  request_log_controller.py
src/entity/: __init__.py
src/entity/context/: __init__.py  key_cache.py  request_context.py
src/entity/databases/: __init__.py  api_key.py  base_model.py  config.py  database.py  request_log.py  request_stats.py
src/entity/req/: __init__.py  anthropic.py  api.py  config.py  key.py  request_log.py
src/entity/res/: __init__.py  api.py  base.py  config.py  key.py  request_log.py
src/mapper/: __init__.py  api_key_mapper.py  request_log_mapper.py
src/service/: api_service.py  cache_service.py  lb_service.py  log_service.py  stats_task.py
src/service/databases/: key_service.py  (+3 more)
src/utils/: admin_auth.py  auth.py  context_utils.py  convert_utils.py  jwt_utils.py  logger.py  response_utils.py
(+6 files in other folders)
